test/files/neg/bug593.check
bug593.scala:1: error: `extends' or `{' expected
trait Wrapper[T](x : T) {
                ^
one error found
